ui white space issue fixed

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,9 @@
+
+html, body{
+  width:100%;
+  overflow-x:hidden;
+}
+
 .no_text_decoration {
   text-decoration: none;
 }
